--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <form id="loginForm" class="auth-form active" onsubmit="handleLogin(event)">
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="email" id="loginEmail" value="demo@example.com" required>
+                    <input type="email" id="loginEmail" required>
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" id="loginPassword" value="demo123" required>
+                    <input type="password" id="loginPassword" required>
                 </div>
                 <button type="submit" class="btn">Login</button>
             </form>
@@ -173,7 +173,7 @@
                         <div style="text-align:center; margin-bottom:30px;">
                             <div style="font-size:60px; color:#667eea;">👤</div>
                             <h3 id="profileName">User</h3>
-                            <p id="profileEmail">email@example.com</p>
+                            <p id="profileEmail"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2b4e464a42476b4e534a465b474e05484446">[email&#160;protected]</a></p>
                         </div>
             
                         <form onsubmit="updateProfile(event)">
@@ -234,9 +234,4 @@
                 </div>
             </div>
 
-    <script src="database.js"></script>
-    <script src="auth.js"></script>
-    <script src="cards.js"></script>
-    <script src="script.js"></script>
-</body>
-</html>
+    <script data-cfasync="false" src="/cdn-cgi/
