--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="authScreen" class="screen active">
         <div class="auth-box">
             <div class="auth-header">
-                <h1>💳 Credit Card Qualifier Pro</h1>
+                <h1>Credit Card Qualifier Pro</h1>
                 <p>Advanced credit card matching with real approval odds</p>
             </div>
             
@@ -64,7 +64,7 @@
     <div id="appScreen" class="screen hidden">
         <header class="app-header">
             <div>
-                <h2 style="color: #667eea;">💳 CardQualifier Pro</h2>
+                <h2 style="color: #667eea;">CardQualifier Pro</h2>
             </div>
             <nav class="app-nav">
                 <button class="nav-btn active" onclick="showPage('dashboard')">🏠 Dashboard</button>
@@ -173,7 +173,7 @@
                         <div style="text-align:center; margin-bottom:30px;">
                             <div style="font-size:60px; color:#667eea;">👤</div>
                             <h3 id="profileName">User</h3>
-                            <p id="profileEmail"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2b4e464a42476b4e534a465b474e05484446">[email&#160;protected]</a></p>
+                            <p id="profileEmail">email@example.com</p>
                         </div>
             
                         <form onsubmit="updateProfile(event)">
@@ -233,5 +233,12 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
-    <script data-cfasync="false" src="/cdn-cgi/
+    <script src="database.js"></script>
+    <script src="auth.js"></script>
+    <script src="cards.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
