--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="authScreen" class="screen active">
         <div class="auth-box">
             <div class="auth-header">
-                <h1>Credit Card Qualifier Pro</h1>
+                <h1>💳 Credit Card Qualifier Pro</h1>
                 <p>Advanced credit card matching with real approval odds</p>
             </div>
             
@@ -64,7 +64,7 @@
     <div id="appScreen" class="screen hidden">
         <header class="app-header">
             <div>
-                <h2 style="color: #667eea;">CardQualifier Pro</h2>
+                <h2 style="color: #667eea;">💳 CardQualifier Pro</h2>
             </div>
             <nav class="app-nav">
                 <button class="nav-btn active" onclick="showPage('dashboard')">🏠 Dashboard</button>
