--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="filter-panel">
                     <div class="form-group">
                         <label>Maximum Annual Fee: $<span id="feeValue">500</span></label>
-                        <input type="range" id="maxFee" min="0" max="1000" value="500" class="range-slider" oninput="document.getElementById('feeValue').textContent = this.value">
+                        <input type="range" id="maxFee" min="0" max="1000" value="500" class="range-slider" oninput="updateSliderGradient(this); document.getElementById('feeValue').textContent = this.value">
                     </div>
                     <div class="form-group">
                         <label>Card Type</label>
